...
  DefaultTheme,
  NavigationContainer,
} from '@react-navigation/native';
import {createStackNavigator} from '@react-navigation/stack';
import {
  AnalyticsConsentScreen,
  CharacterSelectionScreen,
  HomeScreen,
  PerkUpdateScreen,
  SettingScreen,
} from '@screens';
import {State} from '@store';
import {UserSelectors, userSlice} from '@user';
import R from 'ramda';
...
