...
            {data?.content?.map((item, key) => (
              <Paragraph key={key}>{item}</Paragraph>
            ))}
          </Content>
          <Buttons>
            <DisagreeButton
              testID="AnalyticsConsentScreen.DisagreeButton"
              mode="outlined"
              uppercase={false}
              onPress={actions?.onReject}>
              No, I would like to opt out
            </DisagreeButton>
            <AgreeButton
...
