...
    slice,
  );
  const {minusOneCount, onAddMinusOne, onRemoveMinusOne} = useMinusOne(slice);

  const character = combatModifierSelectors.characterSelection(state);

  const onUpdatePerk = () => navigation.navigate('PerkUpdateScreen', {slice});

  const onCharacterSelection = () =>
    navigation.navigate('CharacterSelectionScreen', {slice});

  /* istanbul ignore next */
  const isShuffle =
    R.findIndex<Card>(n => n.isShuffle || false)(discardCards) !== -1;

  return {
...
