// import useData from './data';

// export default class {
//   static useData = useData;
// }

// const useData = () => {
//   return {character: 'Spellweaver', cards: MOCK_DATA};
// };

// export {useData};

// const MOCK_DATA = [{name: 'Card 1'}, {name: 'Card 2'}, {name: 'Card 3'}];

export {default as Data} from './data';
